Exaxxi/Exaxxi/wwwroot/css/demo.css
/* change the background color */
.navbar-custom {
    background-color: transparent;
    z-index: 98 !important;
}

.navbar-custom-scrolled {
    background-color: #272727;
    transition: all 0.3s;
    -webkit-box-shadow: 0px 3px 4px -2px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 3px 4px -2px rgba(0,0,0,0.75);
    box-shadow: 0px 3px 4px -2px rgba(0,0,0,0.75);
}
/* change the brand and text color */
.navbar-custom .navbar-brand,
.navbar-custom .navbar-text {
    color: white;
}

/* change the link color */
.navbar-custom .navbar-nav .nav-link {
    color: white;
    font-family: coolcond;
    transition: all 0.3s;
    font-size: 18px;
    min-width: 50px;
    text-align: center;
}
/* change the color of active or hovered links */
.navbar-custom .nav-item.active .nav-link,
.navbar-custom .nav-item:focus .nav-link,
.navbar-custom .nav-item:hover .nav-link {
    border-bottom: solid thin #ab1113;
    color: #ab1113;
}

.btn-signup {
    background: #ab1113;
    min-width: 90px !important;
}

    .btn-signup:hover {
        color: white !important;
        background-color: #910d0e;
    }

.link-login {
    color: #ebebeb !important;
}

@font-face {
    font-family: "coolrg";
    src: url(../fonts/coolvetica-rg.ttf);
}

@font-face {
    font-family: "coolcond";
    src: url(../fonts/coolvetica-condensed-rg.ttf);
}

@font-face {
    font-family: "ralemed";
    src: url(../fonts/Raleway-Medium-vi.ttf);
}

#brand {
    font-family: coolrg;
}

#title-background {
    background: url(../images/person-t-shirt-wear-1770723.jpg) center;
    height: 500px;
    background-size: cover;
    padding: 100px 0px;
    text-align: center;
}

#title-text {
    color: white;
    font-family: coolrg;
    text-transform: uppercase;
    font-size: 80px;
}

#title-sub-text {
    color: white;
    text-transform: uppercase;
    font-family: ralemed;
    font-size: 40px;
}

.title-divider {
    color: #ab1113;
    text-transform: uppercase;
    background-color: white;
    font-family: coolrg;
    font-size: 22px;
    display: inline-block;
}

.mega-dropdown {
    position: static !important;
}

.mega-dropdown-menu {
    background-color: #ffffff;
    padding: 20px 0px;
    width: 100%;
    position: absolute;
    box-shadow: none;
    -webkit-box-shadow: none;
    border-radius: 0px;
    background-color: #ffffff;
    transition: all 0.3s;
    
}
#search-result-wrapper {
    max-height: 300px;
    overflow-y: auto;
    overflow-x: hidden;
}
.mega-dropdown-menu > li > ul {
    padding: 0;
    margin: 0;
}

.mega-dropdown-menu > li > ul > li {
    list-style: none;
}

.mega-dropdown-menu > li > ul > li > a {
    display: block;
    color: silver;
    transition: 0.3s;
    padding: 3px 5px;
    line-height: 25px;
    font-size: 15px;
}

.mega-dropdown-menu > li ul > li > a:hover,
.mega-dropdown-menu > li ul > li > a:focus {
    text-decoration: none;
    background-color: #ffeab5;
    color: black;
}

.mega-dropdown-menu .dropdown-header {
    font-size: 18px;
    color: #ab1113;
    padding: 5px 60px 5px 5px;
    line-height: 30px;
}

#search_input {
    border: none;
    font-size: 24px;
    font-family: coolcond;
}

#search_input:focus {
    box-shadow: none;
}

#search_button {
    border: none;
    font-size: 20px;
    border-radius: 0px;
    background-color: #ab1113;
    width: 100px;
    font-family: coolrg;
    color: white;
    text-transform: uppercase;
}
.search-result-product-wrapper {
    line-height: 20px;
    margin-bottom:20px;
    
}
.search-empty-result-text{
    font-family:coolrg;
    text-transform:uppercase;
    font-size:20px;
    margin-left:10px;
}
.search-name-wrapper {
    transition: 0.3s;
}
.search-name-wrapper:hover {
    border-bottom: solid thick #ab1113;
}
#search_button:hover {
    background-color: #e03140;
}
.search-brand-name{
    font-family:coolrg;
    text-transform:uppercase;
}
.search-category-name{
    font-family:coolcond;
    color:rgba(0, 0, 0, 0.5);
}
.search-product-name {
    text-transform: uppercase;
    font-size: 24px;
    color: black;
    text-decoration: none!important;
    font-family: coolrg;
    transition:0.3s;
}
.search-product-name:hover{
    color:#ab1113;
}
.search-result-text {
    font-family: coolrg;
    color: #d6d6d6;
    margin-left:10px;
}
.search-img{
    width:100px
}

#category-panel {
    font-family: coolrg;
    font-size: 25px;
    text-transform: uppercase;
    text-align: center;
    overflow-x: auto;
    width: 100%;
    margin-top: 10px;
    white-space: nowrap;
}
#category-panel a {
    display: inline-flex;
    margin-right: 10px;
    margin-left: 10px;
    transition: all 0.3s;
    text-decoration: none;
    color: black;
}

#category-panel a:hover {
    border-bottom: solid medium #ab1113;
    color: #ab1113;
}

.category-panel-active {
    border-bottom: solid medium #ab1113;
    color: #ab1113;
}

.divider-wrapper {
    text-align: center;
    margin-top: -35px;
}

.divider-section {
    margin-top: 30px;
}

.see-all {
    text-align: right;
    font-family: ralemed;
}

    .see-all a {
        color: black;
        text-decoration: none;
    }

        .see-all a:hover {
            color: #ab1113;
        }

#brand-background-1 div {
    height: 500px;
    background-size: cover !important;
    opacity: 0.8;
    transition: 0.3s;
}

    #brand-background-1 div:hover {
        opacity: 1;
    }

.brand-title-1 {
    font-family: coolrg;
    text-transform: uppercase;
    text-align: center;
    padding: 250px 0px;
}

    .brand-title-1 a {
        color: white;
        font-size: 30px;
        text-decoration: none;
        transition: 0.3s;
    }

#brand-background-1 div:hover > .brand-title-1 a {
    color: #ab1113;
    font-size: 40px;
}

#brand-background-2 div {
    height: 350px;
    background-size: cover !important;
    opacity: 0.8;
    transition: 0.3s;
}

    #brand-background-2 div:hover {
        opacity: 1;
    }
/* ... */

